apply setting of assignment operator directly, part of #115

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -78,12 +78,12 @@
 				},
 				"jarl.assignmentOperator": {
 					"default": "<-",
-					"markdownDescription": "Controls the preferred assignment operator and will report usage of the other one if the `assignment` linter is active.",
+					"markdownDescription": "Controls the preferred assignment operator and will report usage of the other one if the `assignment` linter is active. Changes take effect immediately.",
 					"enum": [
 						"<-",
 						"="
 					],
-					"scope": "application",
+					"scope": "window",
 					"type": "string"
 				},
 				"jarl.syncFileSettingsWithClient": {
