--- a/.github/workflows/ecosystem-check.yml
+++ b/.github/workflows/ecosystem-check.yml
@@ -20,6 +20,7 @@ permissions:
 env:
   CARGO_TERM_COLOR: always
   TEST_REPOS: |
+    lrberge/stringmagic@87b187d40c745ea1d8496f071aee7229985da23c
     pola-rs/r-polars@055f891d977d6a8004fe8ab1bb5d47cfdd44872a
     Rdatatable/data.table@d7833cb3a0c36ab329fcfe5cc1523449663f898f
     ropensci/targets@d45243e1a239da467c6e96e0069ecb7368f78021
@@ -30,7 +31,7 @@ env:
     wch/r-source@b5cf23a805f4305852f55c4148f2a302b06844b5
 
 jobs:
-  compare-results:
+  ecosystem-check:
     runs-on: macos-latest
 
     steps:
