--- a/.github/workflows/cargo-test.yml
+++ b/.github/workflows/cargo-test.yml
@@ -36,5 +36,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - name: Cache Rust
+        uses: Swatinem/rust-cache@v2
       - run: cargo install --path crates/jarl-cli --profile=dev
       - run: cargo test --verbose
