--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -131,4 +131,4 @@ jobs:
         uses: thollander/actions-comment-pull-request@v3
         with:
           file-path: benchmark.md
-          comment-tag: execution
+          comment-tag: benchmark-comment
