--- a/.github/workflows/ecosystem-check.yml
+++ b/.github/workflows/ecosystem-check.yml
@@ -119,4 +119,4 @@ jobs:
         uses: thollander/actions-comment-pull-request@v3
         with:
           file-path: lint_comparison.md
-          comment-tag: execution
+          comment-tag: ecosystem-comment
