feat: Add `list2df_linter` (#182)

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -68,6 +68,7 @@ website:
       - rules/length_levels.md
       - rules/length_test.md
       - rules/lengths.md
+      - rules/list2df.md
       - rules/matrix_apply.md
       - rules/numeric_leading_zero.md
       - rules/outer_negation.md
