feat: Implement `expect_length_linter` (#211)

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -66,6 +66,7 @@ website:
       - rules/download_file.md
       - rules/duplicated_arguments.md
       - rules/equals_na.md
+      - rules/expect_length.md
       - rules/expect_not.md
       - rules/expect_null.md
       - rules/expect_true_false.md
