--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,5 @@
 [workspace]
-members = [
-    "crates/*",
-    "editors/zed",
-    "xtask/codegen"
-]
+members = ["crates/*", "editors/zed", "xtask/codegen"]
 resolver = "3"
 
 [workspace.package]
@@ -15,34 +11,29 @@ repository = "https://github.com/etiennebacher/jarl/"
 readme = "README.md"
 
 [workspace.dependencies]
-# Core jarl crates
-jarl-core = { path = "crates/jarl-core" }
-jarl-lsp = { path = "crates/jarl-lsp" }
-
-# External dependencies
-colored = "2.1.0"
-rayon = "1.10.0"
-serde = { version = "1.0.215", features = ["derive"] }
-serde_json = "1.0.143"
+air_fs = { package = "fs", git = "https://github.com/posit-dev/air", rev = "82751bec9d7b0297282c8e24b813e71bc4d461f6" }
 air_r_parser = { git = "https://github.com/posit-dev/air", rev = "82751bec9d7b0297282c8e24b813e71bc4d461f6" }
 air_r_syntax = { git = "https://github.com/posit-dev/air", rev = "82751bec9d7b0297282c8e24b813e71bc4d461f6" }
 air_workspace = { package = "workspace", git = "https://github.com/posit-dev/air", rev = "82751bec9d7b0297282c8e24b813e71bc4d461f6" }
-air_fs = { package = "fs", git = "https://github.com/posit-dev/air", rev = "82751bec9d7b0297282c8e24b813e71bc4d461f6" }
-clap = { version = "4.5.21", features = ["derive"] }
 anyhow = "1.0.94"
-tempfile = "3.14.0"
-biome_rowan = { git = "https://github.com/biomejs/biome", rev = "c13fc60726883781e4530a4437724273b560c8e0" }
 biome_formatter = { git = "https://github.com/biomejs/biome", rev = "c13fc60726883781e4530a4437724273b560c8e0" }
+biome_rowan = { git = "https://github.com/biomejs/biome", rev = "c13fc60726883781e4530a4437724273b560c8e0" }
+clap = { version = "4.5.21", features = ["derive"] }
+colored = "2.1.0"
 ignore = "0.4.23"
-tracing = "0.1.41"
-toml = "0.9.2"
-rustc-hash = "2.1.1"
-path-absolutize = "3.1.1"
-regex = { version = "1.11.1", default-features = false, features = ["std"] }
-schemars = "1.1.0"
-
-# Dev dependencies
 insta = { version = "1.42.0", features = ["yaml"] }
+jarl-core = { path = "crates/jarl-core" }
+jarl-lsp = { path = "crates/jarl-lsp" }
+path-absolutize = "3.1.1"
+rayon = "1.10.0"
+regex = { version = "1.11.1", default-features = false, features = ["std"] }
+rustc-hash = "2.1.1"
+schemars = "1.1.0"
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.143"
+tempfile = "3.14.0"
+toml = "0.9.2"
+tracing = "0.1.41"
 
 [profile.release]
 lto = true
