--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -16,7 +16,18 @@ windows-archive = ".zip"
 # The archive format to use for non-windows builds (defaults .tar.xz)
 unix-archive = ".tar.gz"
 # Target platforms to build apps for (Rust target-triple syntax)
-targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
+targets = [
+  # macOS
+  "aarch64-apple-darwin",
+  "x86_64-apple-darwin",
+  # Windows
+  "x86_64-pc-windows-msvc",
+  # Linux
+  "aarch64-unknown-linux-gnu",
+  "x86_64-unknown-linux-gnu",
+  "aarch64-unknown-linux-musl", # see #287
+  "x86_64-unknown-linux-musl" # see #287
+]
 # Build only the required packages, and individually
 precise-builds = true
 # Whether to auto-include files like READMEs, LICENSEs, and CHANGELOGs (default true)
